--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "graphql": "^16.9.0",
     "http": "^0.0.1-security",
     "mongoose": "^8.7.2"
